--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -3,7 +3,7 @@
       <img src="assets/logo.png" alt="Logo de la empresa" >
 
     </div>
-    <h2>Inicie sesión</h2>
+    <h2>Iniciar sesión</h2>
     <mat-form-field class="example-full-width">
       <mat-label>Usuario</mat-label>
       <input matInput placeholder="Username" [(ngModel)]="username" />
