--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <img src="assets/angular.png" alt="Imagen 1" class="image" />
+    <img src="logo.jpeg" alt="Imagen 1" class="image" />
     <div class="text">
         <p>Angular: Un framework para construir aplicaciones web de una sola página.</p>
     </div>
