--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,6 +1,6 @@
 <div class="container" style="text-align: center" >
     <div>
-      <img src="assets/logo.png" alt="Logo de la empresa" >
+      <img src="logo.jpeg" alt="Logo de la empresa" >
 
     </div>
     <h2>Inicie sesión</h2>
