--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -19,7 +19,7 @@
         .hero {
             position: relative;
             height: 100vh;
-            background: url('https://source.unsplash.com/1600x900/?music,studio') no-repeat center center/cover;
+            background: url('fondo.jpeg') no-repeat center center/cover;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -45,7 +45,7 @@
         }
 
         h1 {
-            font-size: 3rem;
+            font-size: 70px;
             margin-bottom: 0.5rem;
         }
 
