--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,5 @@
-<div class="container" style="text-align: center" >
+<div class="contenedor-papa">
+  <div class="container" style="text-align: center" >
     <div>
       <img src="logo.jpeg" alt="Logo de la empresa" >
 
@@ -21,3 +22,4 @@
     <br />
     <button mat-raised-button class="custom-button " (click)="login()">Ingresar</button>
   </div>
+</div>
