--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -1,13 +1,31 @@
-
-body {
+.contenedor-papa {
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative; /* Necesario para posicionar el pseudo-elemento */
   height: 100vh;
   margin: 0;
   font-family: 'Arial', sans-serif;
-  background-color: #f0f4fa; /* Fondo claro */
+  overflow: hidden; /* Ocultar el exceso del pseudo-elemento */
 }
+
+.contenedor-papa::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url('/fondo.jpeg') no-repeat center center/cover;
+  filter: blur(8px) brightness(0.7); /* Desenfoque y ajuste de brillo */
+  z-index: -1; /* Colocar detrás del contenido */
+}
+
+h1, p {
+  color: #ffffff; /* Texto blanco para mejor contraste */
+  text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5); /* Sombra para mayor legibilidad */
+}
+
 
 .container {
   width: 350px;
@@ -17,7 +35,6 @@ body {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Sombra */
   text-align: center;
   margin: 0 auto ;
-  margin-top: 70px;
 }
 
 .container img {
