--- a/src/app/components/answer/creaeditanswer/creaeditanswer.component.css
+++ b/src/app/components/answer/creaeditanswer/creaeditanswer.component.css
@@ -5,3 +5,117 @@ mat-form-field {
   background-color: rgb(8, 138, 95);
 
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
+body {
+  font-family: 'Arial', sans-serif;
+  background-color: #f5f5f5;
+  color: #333;
+}
+
+
+.container {
+  width: 80%;
+  margin: 5% auto;
+  padding: 2rem;
+  background-color: #ffffff;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  text-align: center;
+}
+
+
+h1 {
+  font-size: 2rem;
+  color: #333;
+  margin-bottom: 2rem;
+  font-weight: bold;
+}
+
+mat-form-field {
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+mat-label {
+  font-size: 1rem;
+  color: #333;
+}
+
+input.mat-input-element {
+  font-size: 1rem;
+  padding: 12px;
+  border-radius: 4px;
+  border: 1px solid #ddd;
+  transition: border 0.3s;
+}
+
+input.mat-input-element:focus {
+  border-color: #4CAF50;
+}
+
+button.custom-button {
+  background-color: #4CAF50;
+  color: white;
+  font-size: 1rem;
+  font-weight: 500;
+  padding: 12px 20px;
+  border-radius: 5px;
+  width: 100%;
+  transition: background-color 0.3s;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+
+button.custom-button:hover {
+  background-color: #388E3C;
+}
+
+mat-form-field:hover {
+  border-color: #4CAF50;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+mat-select {
+  width: 100%;
+  font-size: 1rem;
+  padding: 12px;
+  border-radius: 4px;
+  border: 1px solid #ddd;
+}
+
+mat-option {
+  font-size: 1rem;
+}
+
+@media (max-width: 768px) {
+  .container {
+      width: 95%;
+      margin: 5% auto;
+  }
+
+  h1 {
+      font-size: 1.5rem;
+  }
+
+  button.custom-button {
+      font-size: 0.9rem;
+      padding: 10px 15px;
+  }
+
+  mat-form-field {
+      width: 100%;
+      margin-bottom: 15px;
+  }
+}
