--- a/src/app/components/publics/creaedit-publics/creaedit-publics.component.html
+++ b/src/app/components/publics/creaedit-publics/creaedit-publics.component.html
@@ -13,7 +13,7 @@
         <br />
         
         <mat-form-field class="example-full-width">
-            <mat-label>contenido</mat-label>
+            <mat-label>Contenido</mat-label>
             <input matInput placeholder="escribe tu mensaje ..." formControlName="hcontent" />
           </mat-form-field>
 
@@ -28,7 +28,7 @@
             <mat-datepicker #picker></mat-datepicker>
           </mat-form-field>
           <mat-form-field class="example-full-width">
-            <mat-label>comentarions</mat-label>
+            <mat-label>Comentarios</mat-label>
             <input matInput placeholder="escribe tu mensaje ..." formControlName="hcomments" />
           </mat-form-field>
 
