--- a/src/app/components/mensaje/creaeditmensaje/creaeditmensaje.component.html
+++ b/src/app/components/mensaje/creaeditmensaje/creaeditmensaje.component.html
@@ -13,7 +13,7 @@
         <br />
         
         <mat-form-field class="example-full-width">
-            <mat-label>mensaje</mat-label>
+            <mat-label>Mensaje</mat-label>
             <input matInput placeholder="escribe tu mensaje ..." formControlName="hcontent" />
           </mat-form-field>
 
