--- a/src/app/components/merchandising/creaedit-merchandising/creaedit-merchandising.component.html
+++ b/src/app/components/merchandising/creaedit-merchandising/creaedit-merchandising.component.html
@@ -25,14 +25,14 @@
       <br>
 
       <mat-form-field class="example-full-width">
-        <mat-label>descripcion</mat-label>
+        <mat-label>Descripcion</mat-label>
         <input matInput placeholder="coloca tu descripcion" formControlName="hdescription_merchandising" />
       </mat-form-field>
       <br />
       <br>
 
       <mat-form-field class="example-full-width">
-        <mat-label>precio</mat-label>
+        <mat-label>Precio</mat-label>
         <input matInput placeholder="1500" formControlName="hprice_merchandising" />
       </mat-form-field>
       <br />
