--- a/src/app/components/survey/creaedit-survey/creaedit-survey.component.html
+++ b/src/app/components/survey/creaedit-survey/creaedit-survey.component.html
@@ -15,23 +15,23 @@
         </mat-form-field>
         <br />
         <mat-form-field class="example-full-width">
-          <mat-label>pregunta1</mat-label>
+          <mat-label>Pregunta 1</mat-label>
           <input matInput placeholder="coloca tu descripcion" formControlName="hquestion1" />
         </mat-form-field>
         <mat-form-field class="example-full-width">
-          <mat-label>pregunta2</mat-label>
+          <mat-label>Pregunta 2</mat-label>
           <input matInput placeholder="coloca tu descripcion" formControlName="hquestion2" />
         </mat-form-field>
         <mat-form-field class="example-full-width">
-          <mat-label>titulo</mat-label>
+          <mat-label>Titulo</mat-label>
           <input matInput placeholder="coloca tu titulo" formControlName="htitle" />
         </mat-form-field>
         <mat-form-field class="example-full-width">
-          <mat-label>descripcion</mat-label>
+          <mat-label>Descripcion</mat-label>
           <input matInput placeholder="coloca tu descripcion" formControlName="hdescription" />
         </mat-form-field>
         <mat-form-field>
-          <mat-label>Fechacreacion</mat-label>
+          <mat-label>Fecha de creacion</mat-label>
           <input matInput [matDatepicker]="picker"  formControlName="hcreationDate" />
           <mat-hint>MM/DD/YYYY</mat-hint>
           <mat-datepicker-toggle
