--- a/src/app/components/usuarios/creaedit-usuarios/creaedit-usuarios.component.html
+++ b/src/app/components/usuarios/creaedit-usuarios/creaedit-usuarios.component.html
@@ -30,7 +30,7 @@
       </mat-form-field>
       <br />
       <mat-form-field class="example-full-width" >
-        <mat-label>Teleffono</mat-label>
+        <mat-label>Telefono</mat-label>
         <input matInput formControlName="hphone" />
       </mat-form-field>
       <br />
